<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
         
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Send"
        android:layout_alignBottom="@+id/Send"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/Send"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/Send"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/msgContent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/send" />

    <EditText
        android:id="@+id/msgContent"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_above="@+id/cancel"
        android:layout_alignLeft="@+id/recNum"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msgContent"
        android:layout_alignLeft="@+id/msgContent"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/secretKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/secretKey"
        android:layout_alignLeft="@+id/secretKey"
        android:text="@string/sixteencharseckey"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/recNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:ems="10"
        android:inputType="phone" />

</RelativeLayout>
